--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -369,8 +369,8 @@ ul li {
   margin-bottom: 70px;
 }
 .site-header .intro figure img {
-  width: 500px;
-  padding: 20px;
+  width: 25%;
+  padding: 2.5%;
   position: center;
   
 }
